--- a/EventosyFormularios/prueba.html
+++ b/EventosyFormularios/prueba.html
@@ -97,6 +97,7 @@
 
             <input type="button" value="Enviar1" onclick="enviarDatos1(this.form)"/>
             <input type="button" value="Enviar2" onclick="enviarDatos2(this.form)"/>
+            <input type="button" value="Enviar2" onclick="enviarDatos2(this.form)"/>
 
         </form>
     </fieldset>
