--- a/EventosyFormularios/Ejercicio45/ejercicio44.html
+++ b/EventosyFormularios/Ejercicio45/ejercicio44.html
@@ -79,7 +79,7 @@
 </head>
 
 <body>
-    <form method="" action="" target="" name="formulario1">
+    <form name="formulario1">
 
         Usuario
         <input type="text" name="user" onkeyup="validaDatos()" />
