--- a/ExpresionesRegulares/Ejercicio_4/ejercicio4.html
+++ b/ExpresionesRegulares/Ejercicio_4/ejercicio4.html
@@ -37,14 +37,15 @@
     <form name="form">
 
         Subscripción
-        <input type="radio" name="sub" onchange="comprueba()" />Sí
+        <input type="radio" name="sub" onchange="comprueba()" checked/>Sí
         <input type="radio" name="sub" onchange="comprueba()" />No
 
         <br>
         <br> Afición
-        <input type="checkbox" name="aficion" onkeyup="validarURL()" id="af1" disabled/>Música
-        <input type="checkbox" name="aficion" onkeyup="validarURL()" id="af2" disabled/>Deporte
-        <input type="checkbox" name="aficion" onkeyup="validarURL()" id="af3" disabled/>Cine
+        <input type="checkbox" name="aficion" />Música
+        <input type="checkbox" name="aficion" />Deporte
+        <input type="checkbox" name="aficion" />Cine
+        <input type="checkbox" name="aficion" />Arte
 
 
 
