--- a/ExpresionesRegulares/Ejercicio_7/ejercicio7.html
+++ b/ExpresionesRegulares/Ejercicio_7/ejercicio7.html
@@ -19,7 +19,7 @@
     <script>
         /*Ejercicio del día que no vine*/
 
-        /*Escribir un número de teléfono(validado por expresión regular) y buscar en una lista si ya existe
+        /*Escribir el número de teléfono(validado por expresión regular) y buscar en una lista si ya existe
         Si no existe, insertamos en otra lista el teléfono(new Option(valor))
         
         expresiónRegular=/^\(\+34\)\-d{2}\-d{3}\-d{2}\-d{2}$/
