--- a/EjerciciosDOM/Ejercicio_4/ejercicio4.html
+++ b/EjerciciosDOM/Ejercicio_4/ejercicio4.html
@@ -1,35 +1,36 @@
 <! DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8" />
-<title>Titulo de la pagina</title>
+    <meta charset="utf-8" />
+    <title>Titulo de la pagina</title>
 </head>
+
 <body>
-<div>
-<p id="miP">un poco de texto <a>y un enlace</a></p>
-</div>
-<div id="d"></div>
-<script>
+    <div>
+        <p id="miP">un poco de texto <a>y un enlace</a></p>
+    </div>
+    <div id="d"></div>
+    <script>
+        var nodosHijo = document.getElementById("miP").childNodes.length;
 
-    var nodosHijo = document.getElementById("miP").childNodes.length;
+        var hijosDeP = document.getElementById("miP").childNodes;
 
-    var hijosDeP = document.getElementById("miP").childNodes;
+        for (var i = 0; i < nodosHijo; i++) {
 
-    for(var i=0;i<nodosHijo;i++){
+            if (hijosDeP[i].hasChildNodes()) {
 
-        if(hijosDeP[i].hasChildNodes()){
+                document.getElementById("d").innerHTML += "Este es el nodo hoja del primer hijo → " + hijosDeP[i].firstChild.data + "<br>";
 
-            document.write("Este es el nodo hoja del primer hijo → " + hijosDeP[i].firstChild.data + "<br>");
+            } else {
 
+                document.getElementById("d").innerHTML += "Este es un nodo hoja → " + hijosDeP[i].data + "<br>";
+
+            }
         }
 
-        else{
+    </script>
 
-            document.write("Este es un nodo hoja → " + hijosDeP[i].data + "<br>");
+    <body>
 
-        }
-    }
-
-</script>
-<body>
 </html>
