--- a/EjerciciosDOM/Ejercicio_4/ejercicio4v2.html
+++ b/EjerciciosDOM/Ejercicio_4/ejercicio4v2.html
@@ -12,25 +12,24 @@
     </div>
     <div id="d"></div>
     <script>
-        var hijoDeP = document.getElementById("miP").firstChild;
+        var nodosHijo = document.getElementById("miP").childNodes.length;
 
-        while (hijoDeP != null) {
+        var hijosDeP = document.getElementById("miP").childNodes;
 
-            if (hijoDeP.hasChildNodes()) {
+        for (var i = 0; i < nodosHijo; i++) {
 
-                document.getElementById("d").innerHTML += "Este es el nodo hoja del primer hijo → " + hijoDeP.firstChild.data + "<br>";
+            if (hijosDeP[i].hasChildNodes()) {
+
+                document.getElementById("d").innerHTML += "Este es el nodo hoja del primer hijo → " + hijosDeP[i].firstChild.data + "<br>";
 
             }
 
             else {
 
-                document.getElementById("d").innerHTML += "Este es un nodo hoja → " + hijoDeP.data + "<br>";
+                document.getElementById("d").innerHTML += "Este es un nodo hoja → " + hijosDeP[i].data + "<br>";
 
             }
-
-            hijoDeP = hijoDeP.nextSibling;
         }
-
     </script>
 
     <body>
