--- a/EjerciciosDOM/ejemploModDom2.html
+++ b/EjerciciosDOM/ejemploModDom2.html
@@ -46,7 +46,7 @@
 
     <input type="button" onclick="boton1()" value="beforebegin" />
     <input type="button" onclick="boton2()" value="afterbegin" />
-    <input type="button" onclick="boton3()" value="beforebnd" />
+    <input type="button" onclick="boton3()" value="beforeend" />
     <input type="button" onclick="boton4()" value="afterend" />
     <br>
     <i id="elm">insertar </i>
