--- a/EjerciciosDOM/ejemplos.html
+++ b/EjerciciosDOM/ejemplos.html
@@ -11,6 +11,14 @@
 
     document.getElementsByClass(clase) -> Devuelve un array de elementos con la misma clase
 
+    ******************************************************************************
+
+    AÑADIR UN CONTROLADOR DE EVENTOS->>>>>>>
+
+    elemento.on[EVENTO] = function(){...};
+
+    elemento.addEventListener(EVENTO, función, true/false);
+
 
 
 </body>
